--- a/ActionCtr/app/src/main/res/layout/activity_data.xml
+++ b/ActionCtr/app/src/main/res/layout/activity_data.xml
@@ -21,13 +21,15 @@
         android:layout_weight="1"
         android:layout_alignParentTop="true"
         android:id="@+id/option_select"></Spinner>
-    <Spinner
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:layout_alignParentTop="true"
-        android:id="@+id/option_onTheWay"></Spinner>
-    <Spinner
+
+        <Spinner
+            android:id="@+id/option_onTheWay"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_weight="1"></Spinner>
+
+        <Spinner
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
