--- a/ActionCtr/app/src/main/res/layout/activity_human_sensor.xml
+++ b/ActionCtr/app/src/main/res/layout/activity_human_sensor.xml
@@ -316,10 +316,18 @@
                         android:id="@+id/human_sensor_defend"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="2"
-                        android:background="@drawable/common_plus_signin_btn_text_light"
+                        android:layout_weight="1"
+                        android:background="@android:drawable/picture_frame"
                         android:text="手动防御" />
 
+                    <Button
+                        android:id="@+id/human_topgun_defend_or_attack"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@android:drawable/picture_frame"
+                        android:text="上枪██"
+                        android:textColor="#FF0000"/>
 
                     <Button
                         android:id="@+id/human_sensor_left_gun_none"
@@ -364,15 +372,28 @@
                 android:layout_height="match_parent"
                 android:background="@android:drawable/picture_frame"
                 android:text="返回" />
-
             <Button
-                android:id="@+id/human_topgun_defend_or_attack"
+                android:id="@+id/sun_onthewayleft"
                 android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:background="@drawable/common_google_signin_btn_text_light"
-                android:text="上枪██"
-                android:textColor="#FF0000"/>
+                android:background="@android:drawable/picture_frame"
+                android:text="去左" />
+            <Button
+                android:id="@+id/sun_onthewaymiddle"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:background="@android:drawable/picture_frame"
+                android:text="去中" />
+            <Button
+                android:id="@+id/sun_onthewayright"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:background="@android:drawable/picture_frame"
+                android:text="去右" />
+
         </LinearLayout>
     </LinearLayout>
 
@@ -424,6 +445,7 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/button"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
