--- a/ActionCtr/app/src/main/res/layout/activity_param_change.xml
+++ b/ActionCtr/app/src/main/res/layout/activity_param_change.xml
@@ -85,6 +85,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:textSize="17sp"
                 android:inputType="numberSigned|numberDecimal" />
             <SeekBar
                 android:layout_width="0dp"
@@ -121,6 +122,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:textSize="17sp"
                 android:inputType="numberSigned|numberDecimal" />
             <SeekBar
                 android:layout_width="0dp"
@@ -158,6 +160,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:textSize="17sp"
                 android:inputType="numberSigned|numberDecimal" />
             <SeekBar
                 android:layout_width="0dp"
@@ -193,6 +196,7 @@
                 android:gravity="center"
                 android:layout_weight="1"
                 android:inputType="numberSigned|numberDecimal"
+                android:textSize="17sp"
                 android:id="@+id/edit_speed1"/>
             <SeekBar
                 android:layout_width="0dp"
@@ -228,6 +232,7 @@
                 android:gravity="center"
                 android:layout_weight="1"
                 android:inputType="numberSigned|numberDecimal"
+                android:textSize="17sp"
                 android:id="@+id/edit_speed2"/>
             <SeekBar
                 android:layout_width="0dp"
