--- a/ActionCtr/app/src/main/res/layout/activity_begin.xml
+++ b/ActionCtr/app/src/main/res/layout/activity_begin.xml
@@ -1,159 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout  xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/activity_begin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.action.app.actionctr2.BeginActivity">
+    android:orientation="vertical">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.35"
+        android:orientation="horizontal"
+        android:weightSum="6">
+
+        <TextView
+            android:id="@+id/begin_textview_rssi"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="蓝牙强度" />
+
+        <ProgressBar
+            android:id="@+id/begin_progressbar_rssi"
+            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:max="100"
+            android:progress="0" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        android:gravity="center">
+    <Button
+        android:id="@+id/column6"
+        android:layout_width="0dp"
+        android:layout_weight="0.2"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
-        <RelativeLayout
-            android:layout_width="match_parent"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:text="c6" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/activity_button_and_buttom"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/column1"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:id="@+id/activity_button_and_buttom"
-            >
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/activity_button"
-                android:layout_alignParentTop="true"
-                android:layout_above="@+id/activity_bar">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_above="@+id/column6"
-                    android:layout_alignLeft="@+id/column1"
-                    android:layout_toLeftOf="@+id/column6">
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="蓝牙强度"
-                        android:id="@+id/begin_textview_rssi"/>
-                    <ProgressBar
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="5"
-                        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
-                        android:max="100"
-                        android:progress="0"
-                        android:id="@+id/begin_progressbar_rssi"/>
-                </LinearLayout>
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="0.2"
+            android:text="c1" />
 
-                <Button
-                    android:id="@+id/column1"
-                    android:layout_width="@dimen/buttonWidth"
-                    android:layout_height="@dimen/buttonHeight"
-                    android:layout_alignTop="@+id/column3"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_toLeftOf="@+id/column2"
-                    android:text="c1" />
+        <Button
+            android:id="@+id/column2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="0.2"
+            android:text="c2" />
 
-                <Button
-                    android:id="@+id/column2"
-                    android:layout_width="@dimen/buttonWidth"
-                    android:layout_height="@dimen/buttonHeight"
-                    android:layout_alignTop="@+id/column3"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_toLeftOf="@+id/column3"
-                    android:text="c2" />
+        <Button
+            android:id="@+id/column3"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="0.2"
+            android:text="c3" />
 
-                <Button
-                    android:id="@+id/column3"
-                    android:layout_width="@dimen/buttonWidth"
-                    android:layout_height="@dimen/buttonHeight"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:text="c3" />
+        <Button
+            android:id="@+id/column4"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="0.2"
+            android:text="c4" />
 
-                <Button
-                    android:id="@+id/column4"
-                    android:layout_width="@dimen/buttonWidth"
-                    android:layout_height="@dimen/buttonHeight"
-                    android:layout_alignTop="@+id/column3"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_toRightOf="@+id/column3"
-                    android:text="c4" />
+        <Button
+            android:id="@+id/column5"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="0.2"
+            android:text="c5" />
+    </LinearLayout>
 
-                <Button
-                    android:id="@+id/column5"
-                    android:layout_width="@dimen/buttonWidth"
-                    android:layout_height="@dimen/buttonHeight"
-                    android:layout_alignTop="@+id/column3"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_toRightOf="@+id/column4"
-                    android:text="c5" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        android:gravity="center">
+        <Button
+            android:id="@+id/column7"
+            android:layout_width="0dp"
+            android:layout_weight="0.2"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:text="c7" />
+    </LinearLayout>
 
-                <Button
-                    android:id="@+id/column6"
-                    android:layout_width="@dimen/buttonWidth"
-                    android:layout_height="@dimen/buttonHeight"
-                    android:layout_above="@+id/column3"
-                    android:layout_alignRight="@+id/column3"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-                    android:text="c6" />
+    <LinearLayout
+        android:id="@+id/activity_bar"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.43">
 
-                <Button
-                    android:id="@+id/column7"
-                    android:layout_width="@dimen/buttonWidth"
-                    android:layout_height="@dimen/buttonHeight"
-                    android:layout_alignRight="@+id/column3"
-                    android:layout_below="@+id/column3"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-                    android:text="c7" />
-            </RelativeLayout>
+        <Button
+            android:id="@+id/go_to_human_activity"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginBottom="2dp"
+            android:text="人形传感器" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:id="@+id/activity_bar">
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:id="@+id/go_to_human_activity"
-                    android:text="人形传感器"/>
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="参数数据"
-                    android:id="@+id/go_to_data_activity"/>
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="调试数据"
-                    android:id="@+id/go_to_debug_data_activity"/>
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="关于"/>
-            </LinearLayout>
-        </RelativeLayout>
-    </RelativeLayout>
+        <Button
+            android:id="@+id/go_to_data_activity"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginBottom="2dp"
+            android:text="参数数据" />
 
-</android.support.v4.widget.DrawerLayout >
+        <Button
+            android:id="@+id/go_to_debug_data_activity"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="2dp"
+            android:layout_weight="1"
+            android:text="调试数据" />
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="2dp"
+            android:layout_weight="1"
+            android:text="关于" />
+    </LinearLayout>
+</LinearLayout>
