--- a/ActionCtr/app/src/main/res/layout/activity_human_sensor.xml
+++ b/ActionCtr/app/src/main/res/layout/activity_human_sensor.xml
@@ -2,9 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_human_sensor"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFAFA"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -12,10 +13,11 @@
     tools:context="com.action.app.actionctr2.humanSensorActivity">
 
     <LinearLayout
+        android:id="@+id/human_sensor_normal_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:id="@+id/human_sensor_normal_layout">
+        android:orientation="vertical">
+
         <LinearLayout
 
             android:layout_width="match_parent"
@@ -303,6 +305,14 @@
                     android:orientation="horizontal">
 
                     <Button
+                        android:id="@+id/human_sensor_reset"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@android:drawable/picture_frame"
+                        android:text="重启" />
+
+                    <Button
                         android:id="@+id/human_sensor_defend"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
@@ -311,12 +321,13 @@
                         android:text="手动防御" />
 
                     <Button
-                        android:id="@+id/human_sensor_reset"
+                        android:id="@+id/human_topgun_defend_or_attack"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="2"
-                        android:background="@drawable/common_plus_signin_btn_text_light"
-                        android:text="重启" />
+                        android:layout_weight="1"
+                        android:background="@android:drawable/picture_frame"
+                        android:text="上枪██"
+                        android:textColor="#FF0000"/>
 
                     <Button
                         android:id="@+id/human_sensor_left_gun_none"
@@ -338,98 +349,200 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1">
-
+            android:layout_weight="1"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/start_on"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:background="@android:drawable/picture_frame"
+                android:text="出发" />
+            <Button
+                android:id="@+id/goback"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:background="@android:drawable/picture_frame"
+                android:text="重装" />
             <Button
                 android:id="@+id/human_sensor_cancel"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:background="@android:drawable/picture_frame"
                 android:text="返回" />
+            <Button
+                android:id="@+id/sun_onthewayleft"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:background="@android:drawable/picture_frame"
+                android:text="去左" />
+            <Button
+                android:id="@+id/sun_onthewaymiddle"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:background="@android:drawable/picture_frame"
+                android:text="去中" />
+            <Button
+                android:id="@+id/sun_onthewayright"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:background="@android:drawable/picture_frame"
+                android:text="去右" />
+
         </LinearLayout>
     </LinearLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/human_sensor_defend_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="30dp"
+        android:orientation="vertical"
         android:visibility="invisible">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:text="防守0"
-            android:textSize="40sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:text="防守1"
-            android:textSize="40sp" />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/common_plus_signin_btn_text_light"
+                android:text="防守0"
+                android:textSize="50sp"
+                android:textStyle="bold" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:text="防守2"
-            android:textSize="40sp" />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:background="@drawable/common_plus_signin_btn_text_light"
+                android:text="防守2"
+                android:textSize="50sp"
+                android:textStyle="bold" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:text="防守3"
-            android:textSize="40sp" />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/common_plus_signin_btn_text_light"
+                android:text="防守4"
+                android:textSize="50sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:text="防守4"
-            android:textSize="40sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:text="防守5"
-            android:textSize="40sp" />
+            <Button
+                android:id="@+id/button"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/common_plus_signin_btn_text_light"
+                android:text="防守1"
+                android:textSize="50sp"
+                android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/human_sensor_defend_shot7frisbee"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:text="射7盘"
-            android:textSize="40sp" />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:background="@drawable/common_plus_signin_btn_text_light"
+                android:text="防守3"
+                android:textSize="50sp"
+                android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/human_sensor_defend_shot6frisbee"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:text="射6盘"
-            android:textSize="40sp" />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/common_plus_signin_btn_text_light"
+                android:text="防守5"
+                android:textSize="50sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/human_sensor_defend_cancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:textSize="20sp"
-            android:text="取消" />
-    </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/human_sensor_defend_shot7frisbee"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/common_plus_signin_btn_text_light"
+                android:text="射7盘"
+                android:textSize="50sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/human_sensor_defend_cancel"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/common_plus_signin_btn_text_light"
+                android:text="取消"
+                android:textSize="50sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/human_sensor_defend_shot6frisbee"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/common_plus_signin_btn_text_light"
+                android:text="射6盘"
+                android:textSize="50sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"></LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"></LinearLayout>
+
+            <Button
+                android:id="@+id/human_topgun_defend_or_attack_copy"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/common_google_signin_btn_text_light"
+                android:text="上枪██"
+                android:textColor="#FF0000"
+                android:textSize="50sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+
+
+    </LinearLayout>
 
 </RelativeLayout>
